fixed horizontal align containers, updated footer

--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ section {
   background-position: center;
   text-align: left;
   width: 100%;
-  min-height: 50vh;
+  min-height: 65vh;
 }
 
 #main-section p {
@@ -195,7 +195,13 @@ section {
 }
 
 .review {
-  border-right: 1px solid grey;
+  /*border-right: 1px solid grey;*/
+  max-width: 25%;
+  text-align: left;
+}
+
+.quoted {
+  text-align: right;
 }
 
 .review:last-child {
@@ -237,7 +243,7 @@ p {
 .horizontal-container {
   display: flex;
   flex-direction: row;
-  justify-content: center space-evenly;
+  justify-content: space-evenly;
   align-items: flex-start;
   margin: 30px 0px;
 }
@@ -254,17 +260,18 @@ p {
 }
 
 header {
-  height: 10vh;
+  height: 5vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: 10px 0px;
 }
 
 header img {
   max-height: 100%;
-  max-width: auto;
   flex: 1 1 auto;
   align-self: center;
+  object-fit: contain;
 }
 
 header h1 {
@@ -277,7 +284,27 @@ header nav {
   align-self: center;
 }
 
-header nav ul {
+nav ul {
   display: flex;
   flex-direction: row;
+}
+
+nav ul li {
+  padding: 5px;
+  border-left: 1px solid grey;
+  margin: 5px;
+  text-align: center;
+}
+
+footer {
+  color: white;
+  background-color: black;
+}
+
+footer nav {
+  justify-content: flex-end;
+}
+
+footer nav a {
+  color: white;
 }
